add members group and about section

--- a/index.html
+++ b/index.html
@@ -4,8 +4,50 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>کد ماستر</title>
+    <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
-    
+   
+    <div class="header">
+        <ul class="nav-list">
+            <li class="list-item">صفحه اصلی</li>
+            <li class="list-item">در باره ما</li>
+            <li class="list-item">اعضای گروه</li>
+            <li class="list-item">محصولات</li>
+        </ul>
+        <h1 class="title">شرکت طراحی وب <span>کد ماستر</span></h>
+            <p class="desc">طراحی انواع سایت های شخصی؛ شرکتی؛ فروشگاهی و ...</p>
+
+    </div>
+    <div class="members">
+        <h2>اعضای گروه</h2>
+        <ul class="member-list">
+            <li class="member-item">
+                <img class="member-image" src="images/img1.jpg" alt="">
+                <h3 class="member-name">مایکل</h3>
+                <p class="member-desc">وجه مشتری به فرآیند بسیار مهم است. بگذار از لذت ها، از آن وظایف بدن بگریزد، زیرا گاهی تمرین است، یا آن را دفع می کنیم که گویی ناشی از درد است. عاقلانه! لذت و لذتی بزرگ از او گشوده می‌شود، با دردهایی که در اینجا نمی‌دانند، و به دنبال آن کارهای بدنی، یا پس زده، مجبورند خود تربیت را بپذیرند، مفسد برای به دست آوردن چیزی، با تحمل از دست می‌دهند. حادثه. بنابراین، با ارزش ترین خواهد بود. در طرد بزرگترها چاره ای نیست، یا پذیرفتن آنها آسان است، زاده ترین اشتباه حقیقت را بجویند، و هر آنچه را که هر کس به بدهی بسته است، دچار درد شود؟</p>
+            </li>
+            <li class="member-item">
+                <img class="member-image" src="images/img2.jpg" alt="">
+                <h3 class="member-name">میلورین</h3>
+                <p class="member-desc">وجه مشتری به فرآیند بسیار مهم است. بگذار از لذت ها، از آن وظایف بدن بگریزد، زیرا گاهی تمرین است، یا آن را دفع می کنیم که گویی ناشی از درد است. عاقلانه! لذت و لذتی بزرگ از او گشوده می‌شود، با دردهایی که در اینجا نمی‌دانند، و به دنبال آن کارهای بدنی، یا پس زده، مجبورند خود تربیت را بپذیرند، مفسد برای به دست آوردن چیزی، با تحمل از دست می‌دهند. حادثه. بنابراین، با ارزش ترین خواهد بود. در طرد بزرگترها چاره ای نیست، یا پذیرفتن آنها آسان است، زاده ترین اشتباه حقیقت را بجویند، و هر آنچه را که هر کس به بدهی بسته است، دچار درد شود؟</p>
+
+            </li>
+            <li class="member-item">
+                <img class="member-image" src="images/img3.jpg" alt="">
+                <h3 class="member-name">مارتن</h3>
+                <p class="member-desc">وجه مشتری به فرآیند بسیار مهم است. بگذار از لذت ها، از آن وظایف بدن بگریزد، زیرا گاهی تمرین است، یا آن را دفع می کنیم که گویی ناشی از درد است. عاقلانه! لذت و لذتی بزرگ از او گشوده می‌شود، با دردهایی که در اینجا نمی‌دانند، و به دنبال آن کارهای بدنی، یا پس زده، مجبورند خود تربیت را بپذیرند، مفسد برای به دست آوردن چیزی، با تحمل از دست می‌دهند. حادثه. بنابراین، با ارزش ترین خواهد بود. در طرد بزرگترها چاره ای نیست، یا پذیرفتن آنها آسان است، زاده ترین اشتباه حقیقت را بجویند، و هر آنچه را که هر کس به بدهی بسته است، دچار درد شود؟</p>
+            </li>
+        </ul>
+    </div>
+  <div class="about">
+    <div class="circle">
+        <h2 class="about-company">درباره شرکت</h2>
+        <p class="about-desc">وجه مشتری به فرآیند بسیار مهم است. بگذار از لذت ها، از آن وظایف بدن بگریزد، زیرا گاهی تمرین است، یا آن را دفع می کنیم که گویی ناشی از درد است. عاقلانه! لذت و لذتی بزرگ از او گشوده می‌شود، با دردهایی که در اینجا نمی‌دانند، و به دنبال آن کارهای بدنی، یا پس زده، مجبورند خود تربیت را بپذیرند، مفسد برای به دست آوردن چیزی، با تحمل از دست می‌دهند. حادثه. بنابراین، با ارزش ترین خواهد بود. در طرد بزرگترها چاره ای نیست، یا پذیرفتن آنها آسان است، زاده ترین اشتباه حقیقت را بجویند، و هر آنچه را که هر کس به بدهی بسته است، دچار درد شود؟</p>
+    </div>
+  </div>
+  <div class="footer"></div>
+
 </body>
 </html>
