--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>کد ماستر</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
 </head>
 <body>
@@ -47,7 +49,15 @@
         <p class="about-desc">وجه مشتری به فرآیند بسیار مهم است. بگذار از لذت ها، از آن وظایف بدن بگریزد، زیرا گاهی تمرین است، یا آن را دفع می کنیم که گویی ناشی از درد است. عاقلانه! لذت و لذتی بزرگ از او گشوده می‌شود، با دردهایی که در اینجا نمی‌دانند، و به دنبال آن کارهای بدنی، یا پس زده، مجبورند خود تربیت را بپذیرند، مفسد برای به دست آوردن چیزی، با تحمل از دست می‌دهند. حادثه. بنابراین، با ارزش ترین خواهد بود. در طرد بزرگترها چاره ای نیست، یا پذیرفتن آنها آسان است، زاده ترین اشتباه حقیقت را بجویند، و هر آنچه را که هر کس به بدهی بسته است، دچار درد شود؟</p>
     </div>
   </div>
-  <div class="footer"></div>
+  <div class="footer">
+    <div class="social-media">
+        <i class="material-icons">telegram</i>
+        <i class="material-icons">facebook</i>
+        <i class="material-icons">gmail</i>
+    </div>
+   
+  </div>
+    
 
 </body>
 </html>
